= 2012/03/07	0.82

s/tmpdir/tmpdie/

= 2011/07/26	0.81

Add regression tests.

Add Daemon::Generic::AnyEvent

= 2011/05/19	0.72

Address https://rt.cpan.org/Public/Bug/Display.html?id=63704,
call setsid between forks rather than after them.

Address https://rt.cpan.org/Public/Bug/Display.html?id=58995,
don't unexpand tabs.

= 2010/07/14	0.71

Fix bug 58287 - close STDIN when daemonizing to complete the
detach.

= 2009/04/04	0.61

Stefan Seifert sent in a patch to make it LSB conformant.
Note: start now exits with 0 if the daemon is already running.

scips noted an error in the example program.

= 2007/08/15	0.51

Add File::Slurp dependency to Makefile.PL.   Reported
by Tom Lea <tom dot lea at zeninternet dot co dot uk>.

= 2007/03/27	0.4

Ronald J Kimball <rjk at tamias dot net> sent in
a patch to avoid accidently clobbering $0.